# shopping-cart-back

./: .env.example  README.md  config.py  docker-compose.yml  pyproject.toml
app/: app.py  config.py  init.py  models.py  routes.py  services.py
docker/: Dockerfile
migrations/versions/: 5ab9d66da0dd_init_migrations.py  990eeef6e75d_update_table_cart_items.py
tests/: conftest.py  test_routes.py
